# silicium

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  absolute__path_8hpp.html  absolute__path_8hpp_source.html  accepting__source_8hpp.html  accepting__source_8hpp_source.html  annotated.html  appveyor.yml  argument__of_8hpp.html  argument__of_8hpp_source.html  async__process_8hpp.html  async__process_8hpp_source.html  basic__dynamic__library_8hpp.html  basic__dynamic__library_8hpp_source.html  boost__threading_8hpp.html  boost__threading_8hpp_source.html  bridge_8hpp.html  bridge_8hpp_source.html  buffer_8hpp.html  buffer_8hpp_source.html  buffering__sink_8hpp.html  buffering__sink_8hpp_source.html  buffering__source_8hpp.html  buffering__source_8hpp_source.html  byte_8hpp.html  byte_8hpp_source.html  c__string_8hpp.html  c__string_8hpp_source.html  cache_8hpp.html  cache_8hpp_source.html  classes.html  conanfile.py  config_8hpp.html  config_8hpp_source.html  connecting__observable_8hpp.html  (+820 more)
examples/: CMakeLists.txt  directory_watcher.cpp  dynamic_web_site.cpp  hellohttp.cpp  helloworld.cpp  html.cpp  http_hello.cpp  http_proxy.cpp  libgit2.cpp  react.cpp  run_process.cpp  rxhttp.cpp  safe_unsigned.cpp  sdl.cpp  self.cpp  service.cpp  si_git.cpp  silicium_build_tester.cpp  sleep.cpp  trivialhttp.cpp  variant.cpp  vs2015_await.cpp  watchdir.cpp  websocketpp.cpp  websocketpp.hpp.js  websocketpp.js
find_package_test/: CMakeLists.txt  test.cpp
reactive/: CMakeLists.txt  bridge.hpp  buffer.hpp  cache.hpp  config.hpp  connector.hpp  consume.hpp  coroutine.hpp  delay.hpp  deref_optional.hpp  directory_watcher.hpp  empty.cpp  enumerate.hpp  file_system_watcher.hpp  filter.hpp  finite_state_machine.hpp  flatten.hpp  for_each.hpp  generate.hpp  get.hpp  observable.hpp  observable_source.hpp  observer.hpp  process.hpp  ptr_observable.hpp  received_from_socket_source.hpp  receiver.hpp  ref.hpp  sending_observable.hpp  socket_observable.hpp  take.hpp  tcp_acceptor.hpp  timer.hpp  total_consumer.hpp  transform.hpp  transform_if_initialized.hpp  tuple.hpp  variant.hpp  variant_observable.hpp  while.hpp
reactive/linux/: directory_watcher.hpp  file_system_watcher.hpp  inotify.cpp  inotify.hpp
reactive/win32/: directory_changes.cpp  directory_changes.hpp  directory_watcher.hpp  file_system_watcher.hpp
silicium/: CMakeLists.txt  absolute_path.hpp  aligned_ref.hpp  alignment_of.hpp  array_view.hpp  async_process.hpp  block_thread.hpp  boost_threading.hpp  bounded_int.hpp  bridge.hpp  buffer.hpp  buffering_source.hpp  build_result.hpp  byte.hpp  byte_order_intrinsics.hpp  c_string.hpp  cache.hpp  checked_arithmetic.hpp  cmake.hpp  config.hpp  connecting_observable.hpp  connector.hpp  constant_observable.hpp  consume.hpp  container_buffer.hpp  copy.hpp  coroutine.hpp  coroutine_generator.hpp  delay.hpp  deref_optional.hpp  directory_allocator.cpp  directory_allocator.hpp  directory_builder.cpp  directory_builder.hpp  directory_watcher.hpp  dynamic_library.hpp  empty.hpp  end_observable.hpp  enumerate.hpp  environment_variables.hpp  (+125 more)
silicium/arithmetic/: add.hpp  overflow_or.hpp
silicium/asio/: accepting_source.cpp  accepting_source.hpp  async.hpp  async_source.hpp  block_thread.hpp  connecting_observable.hpp  connecting_source.cpp  connecting_source.hpp  post_forwarder.hpp  posting_observable.hpp  process_output.hpp  reading_observable.hpp  sending_observable.hpp  socket_observable.hpp  socket_sink.cpp  socket_sink.hpp  socket_source.cpp  socket_source.hpp  tcp_acceptor.hpp  tcp_trigger.cpp  tcp_trigger.hpp  timer.hpp  use_observable.hpp  writing_observable.hpp
silicium/delegator/: generate.hpp
silicium/detail/: argument_of.hpp  basic_dynamic_library.hpp  element_from_optional_like.hpp  integer_sequence.hpp  line_source.hpp  proper_value_function.hpp  then.hpp  transform.hpp
silicium/git/: oxid.cpp  oxid.hpp  repository.cpp  repository.hpp
silicium/html/: generator.hpp  tags.hpp  tree.hpp
silicium/http/: generate_header.hpp  generate_request.hpp  generate_response.hpp  http.cpp  http.hpp  parse_request.hpp  parse_response.hpp  receive_request.hpp  request_parser_sink.hpp  uri.hpp
silicium/linux/: directory_watcher.hpp  dynamic_library_impl.hpp  file_descriptor.hpp  inotify.cpp  inotify.hpp  inotify_watch_descriptor.hpp  native_file_descriptor.hpp  open.hpp  process.hpp  process_handle.hpp  single_directory_watcher.hpp
silicium/observable/: bridge.hpp  buffer.hpp  cache.hpp  constant.hpp  consume.hpp  coroutine.hpp  coroutine_generator.hpp  deref_optional.hpp  empty.hpp  end.hpp  enumerate.hpp  erase_shared.hpp  erase_unique.hpp  erased_observer.hpp  error_or_enumerate.hpp  extensible_observer.hpp  filter.hpp  finite_state_machine.hpp  flatten.hpp  for_each.hpp  function.hpp  function_observable.hpp  function_observer.hpp  generator.hpp  generator_observable.hpp  limited.hpp  observable.hpp  observer.hpp  on_first.hpp  ptr.hpp  ptr_observable.hpp  ready_future.hpp  ref.hpp  source.hpp  spawn_coroutine.hpp  spawn_observable.hpp  take.hpp  thread.hpp  thread_generator.hpp  total_consumer.hpp  (+7 more)
silicium/posix/: native_file_descriptor.hpp  open.hpp  pipe.hpp  process.hpp  run_process.hpp
silicium/sink/: append.hpp  buffer.hpp  buffering_sink.hpp  container_buffer.hpp  (+11 more)
system_test/: CMakeLists.txt
test/: CMakeLists.txt  absolute_path.cpp  aligned_ref.cpp  array_view.cpp  asio.cpp  asio_use_observable.cpp  async_pipe.cpp  async_process.cpp  async_read_write.cpp  bounded_int.cpp  brainfuck.cpp  buffering_sink.cpp  byte.cpp  c_binding.cpp  c_string.cpp  channel.cpp  checked_arithmetic.cpp  compact_optional.cpp  container_buffer.cpp  copy.cpp  coroutine.cpp  coroutine_generator.cpp  delegator.cpp  delegator_sink.hpp  dsl.cpp  dynamic_library.cpp  enumerating_source.cpp  error_code.cpp  error_or.cpp  exchange.cpp  expected.cpp  fast_variant.cpp  file_operations.cpp  file_sink.cpp  file_size.cpp  file_source.cpp  file_system_watcher.cpp  filter.cpp  filter_observable.cpp  filter_source.cpp  (+49 more)
test_includes/: CMakeLists.txt  generate_sources.cpp
(+607 files in other folders)
