#Boost.Test uses typeid for no reason
if(NOT SILICIUM_NO_RTTI)
	include_directories(.)
	include_directories(../cdm)
	file(GLOB sources "*.cpp")
	file(GLOB_RECURSE headers "../silicium/*.hpp")
	if(SILICIUM_HAS_CDM)
		file(GLOB cdmSources "cdm/*.cpp")
	endif()
	add_executable(system_test ${sources} ${cdmSources} ${headers})
	if(SILICIUM_HAS_CDM)
		target_link_libraries(system_test cdm_core)
	endif()
	target_link_libraries(system_test ${URIPARSER_LIBRARIES} ${Boost_LIBRARIES})
endif()
