#Boost.Test uses typeid for no reason
if(NOT SILICIUM_NO_RTTI AND SILICIUM_HAS_CDM)
	include_directories(.)
	include_directories(../cdm)
	file(GLOB sources "*.cpp")
	file(GLOB_RECURSE headers "../cdm/modules/*.hpp")
	file(GLOB cdmSources "cdm/*.cpp")
	add_executable(system_test ${sources} ${cdmSources} ${headers})
	target_link_libraries(system_test cdm_core ${Boost_LIBRARIES})
endif()
