#Boost.Test uses typeid for no reason
if(NOT SILICIUM_NO_RTTI)
	include_directories(.)
	include_directories(../cdm)
	file(GLOB sources "*.hpp" "*.cpp" "observable/*" "source/*" "sink/*" "cdm/*")
	file(GLOB_RECURSE headers "../silicium/*.hpp")
	if(LUA51_FOUND)
		file(GLOB luaSources "lua/*.cpp")
	endif()
	if(ZLIB_FOUND)
		file(GLOB zlibSources "zlib/*.cpp")
	endif()
	if(URIPARSER_FOUND)
		file(GLOB uriSources "uri/*.cpp")
	endif()
	if(NOT (Boost_VERSION LESS 105300))
		file(GLOB cBindingSources "c_binding/*.cpp")
	endif()
	add_executable(unit_test ${sources} ${luaSources} ${zlibSources} ${uriSources} ${cBindingSources} ${headers})
	add_dependencies(unit_test cdm_websocketpp)
	if(NOT (Boost_VERSION LESS 105300))
		target_link_libraries(unit_test siliciumc)
	endif()
	target_link_libraries(unit_test cdm_core ${URIPARSER_LIBRARIES} ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES})
	if(ZLIB_FOUND)
		target_link_libraries(unit_test ${ZLIB_LIBRARY})
	endif()
	if(SILICIUM_LINUX)
		target_link_libraries(unit_test dl)
	endif()
endif()
