#Boost.Test uses typeid for no reason
if(NOT SILICIUM_NO_RTTI)
	include_directories(.)
	file(GLOB sources "*.hpp" "*.cpp" "observable/*" "source/*" "sink/*")
	file(GLOB_RECURSE headers "../silicium/*.hpp")
	if(LUA51_FOUND)
		file(GLOB luaSources "lua/*.cpp")
	endif()
	if(ZLIB_FOUND)
		file(GLOB zlibSources "zlib/*.cpp")
	endif()
	if(URIPARSER_FOUND)
		file(GLOB uriSources "uri/*.cpp")
	endif()
	set(allSources ${sources} ${luaSources} ${zlibSources} ${uriSources} ${headers})
	set(formatted ${formatted} ${allSources} PARENT_SCOPE)
	add_executable(unit_test ${allSources})
	target_link_libraries(unit_test ${URIPARSER_LIBRARIES} ${Boost_LIBRARIES} ${SQLITE3_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
	if(ZLIB_FOUND)
		target_link_libraries(unit_test ${ZLIB_LIBRARY})
	endif()
	if(SILICIUM_LINUX)
		target_link_libraries(unit_test dl)
	endif()
endif()
