option(SILICIUM_TEST_INCLUDES "verify that you can #include all public headers without issues" OFF)
if(SILICIUM_TEST_INCLUDES)
	file(GLOB sources "dummy.cpp" "sources/*.cpp" "sources/detail/*.cpp" "sources/observable/*.cpp" "sources/sink/*.cpp" "sources/source/*.cpp" "sources/zlib/*.cpp")
	file(GLOB_RECURSE sources_asio "sources/asio/*.cpp")
	file(GLOB_RECURSE sources_detail "sources/detail/*.cpp")
	file(GLOB_RECURSE sources_git "sources/git/*.cpp")
	file(GLOB_RECURSE sources_html "sources/html/*.cpp")
	file(GLOB_RECURSE sources_http "sources/http/*.cpp")
	if(UNIX AND NOT APPLE)
		file(GLOB_RECURSE sources_linux "sources/posix/*.cpp" "sources/linux/*.cpp")
	endif()
	if(WIN32)
		file(GLOB_RECURSE sources_win32 "sources/win32/*.cpp")
	endif()
	add_library(test_includes ${sources} ${sources_asio} ${sources_detail} ${sources_git} ${sources_http} ${sources_linux} ${sources_win32} ${sources_html})
endif()

set(formatted ${formatted} ${CMAKE_CURRENT_SOURCE_DIR}/generate_sources.cpp PARENT_SCOPE)
add_executable(test_includes_generate "generate_sources.cpp")
target_link_libraries(test_includes_generate ${Boost_LIBRARIES} ${CONAN_LIBS})
