cmake_minimum_required(VERSION 2.8)
project(using_cppnetlib)
set(CPPNETLIB_PREFIX_PATH "" CACHE TYPE PATH)
set(GTEST_INCLUDE_DIRS "" CACHE TYPE PATH)
set(GTEST_LIBRARIES "" CACHE TYPE STRING)
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${CPPNETLIB_PREFIX_PATH})
find_package(cppnetlib 0.11.0 REQUIRED)
include_directories(${CPPNETLIB_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})
add_executable(using_cppnetlib using_cppnetlib.cpp cdm.hpp)
target_link_libraries(using_cppnetlib ${CPPNETLIB_LIBRARIES} ${GTEST_LIBRARIES} pthread)
